そこそこ動く状態でコミット

--- a/EvidenceCapture/App.config
+++ b/EvidenceCapture/App.config
@@ -25,6 +25,12 @@
             <setting name="DefaultOutput" serializeAs="String">
                 <value />
             </setting>
+            <setting name="GroupPattern" serializeAs="String">
+                <value>[n]-[n]-[n]</value>
+            </setting>
+            <setting name="ImageFormat" serializeAs="String">
+                <value>png</value>
+            </setting>
         </EvidenceCapture.Properties.Settings>
     </userSettings>
 </configuration>
