Excel出力に対応

--- a/EvidenceCapture/App.config
+++ b/EvidenceCapture/App.config
@@ -31,6 +31,15 @@
             <setting name="ImageFormat" serializeAs="String">
                 <value>png</value>
             </setting>
+            <setting name="DefaultWidth" serializeAs="String">
+                <value>640</value>
+            </setting>
+            <setting name="DefaultHeight" serializeAs="String">
+                <value>480</value>
+            </setting>
+            <setting name="OutputFormat" serializeAs="String">
+                <value>1</value>
+            </setting>
         </EvidenceCapture.Properties.Settings>
     </userSettings>
 </configuration>
