--- a/EvidenceCapture/Properties/Settings.settings
+++ b/EvidenceCapture/Properties/Settings.settings
@@ -11,5 +11,14 @@
     <Setting Name="ImageFormat" Type="System.String" Scope="User">
       <Value Profile="(Default)">png</Value>
     </Setting>
+    <Setting Name="DefaultWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">640</Value>
+    </Setting>
+    <Setting Name="DefaultHeight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">480</Value>
+    </Setting>
+    <Setting Name="OutputFormat" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
