グループ名のリネームに対応

--- a/EvidenceCapture/App.config
+++ b/EvidenceCapture/App.config
@@ -40,6 +40,9 @@
             <setting name="OutputFormat" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="IsUnderReset" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EvidenceCapture.Properties.Settings>
     </userSettings>
 </configuration>
