--- a/EvidenceCapture/Properties/Settings.settings
+++ b/EvidenceCapture/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="OutputFormat" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="IsUnderReset" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
