--- a/EvidenceCapture/packages.config
+++ b/EvidenceCapture/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net462" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net462" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net462" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net462" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net462" />
 </packages>
