--- a/EvidenceCapture/EvidenceCapture.csproj
+++ b/EvidenceCapture/EvidenceCapture.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ViewModel\Overray\ReportFinishViewModel.cs" />
     <Compile Include="ViewModel\Overray\ReportViewModel.cs" />
     <Compile Include="View\Converter\BoolToEnumConverter.cs" />
+    <Compile Include="View\Converter\TreeItemConverter.cs" />
     <Compile Include="View\Custom\BindableCommandCombobox.cs" />
     <Compile Include="View\Custom\BindableSelectedItemTreeView.cs" />
     <Compile Include="View\ImageProcessingControl.xaml.cs">
