アプリケーション設定の設定変更に対応

--- a/EvidenceCapture/App.config
+++ b/EvidenceCapture/App.config
@@ -43,6 +43,21 @@
             <setting name="IsUnderReset" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="KeyShortCutScreenCap" serializeAs="String">
+                <value>Alt + PrintScreen</value>
+            </setting>
+            <setting name="KeyShortCutApplicationCap" serializeAs="String">
+                <value>PrintScreen</value>
+            </setting>
+            <setting name="KeyShortCutG1" serializeAs="String">
+                <value>Alt + D1</value>
+            </setting>
+            <setting name="KeyShortCutG2" serializeAs="String">
+                <value>Alt + D2</value>
+            </setting>
+            <setting name="KeyShortCutG3" serializeAs="String">
+                <value>Alt + D3</value>
+            </setting>
         </EvidenceCapture.Properties.Settings>
     </userSettings>
   <runtime>
