Webカメラ連携とNlog出力を追加

--- a/EvidenceCapture/App.config
+++ b/EvidenceCapture/App.config
@@ -20,6 +20,12 @@
             <setting name="DefaultDisplayIsNormal" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DefaultDisplayX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DefaultDisplayY" serializeAs="String">
+                <value>0</value>
+            </setting>
         </EvidenceCapture.Properties.DisplaySettings>
         <EvidenceCapture.Properties.Settings>
             <setting name="DefaultOutput" serializeAs="String">
@@ -41,7 +47,7 @@
                 <value>1</value>
             </setting>
             <setting name="IsUnderReset" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="KeyShortCutScreenCap" serializeAs="String">
                 <value>Alt + PrintScreen</value>
@@ -57,6 +63,15 @@
             </setting>
             <setting name="KeyShortCutG3" serializeAs="String">
                 <value>Alt + D3</value>
+            </setting>
+            <setting name="IsWindowCapture" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DefaultCamDevice" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="KeyShortCutCameraCap" serializeAs="String">
+                <value>Alt + C</value>
             </setting>
         </EvidenceCapture.Properties.Settings>
     </userSettings>
