--- a/EvidenceCapture/Properties/DisplaySettings.settings
+++ b/EvidenceCapture/Properties/DisplaySettings.settings
@@ -2,14 +2,20 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="EvidenceCapture.Properties" GeneratedClassName="DisplaySettings">
   <Profiles />
   <Settings>
-    <Setting Name="DefaultDisplayWidth" Type="System.Int32" Scope="User">
+    <Setting Name="DefaultDisplayWidth" Type="System.Double" Scope="User">
       <Value Profile="(Default)">640</Value>
     </Setting>
-    <Setting Name="DefaultDisplayHeight" Type="System.Int32" Scope="User">
+    <Setting Name="DefaultDisplayHeight" Type="System.Double" Scope="User">
       <Value Profile="(Default)">480</Value>
     </Setting>
     <Setting Name="DefaultDisplayIsNormal" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="DefaultDisplayX" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="DefaultDisplayY" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
