--- a/EvidenceCapture/packages.config
+++ b/EvidenceCapture/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net462" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net462" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net462" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net462" />
   <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net462" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net462" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net462" />
+  <package id="NLog" version="4.6.7" targetFramework="net462" />
   <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net462" />
 </packages>
